Docs: sphinx-quickstart

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 # Ignore Pipfile.lock files unless version locking is specifically desired (create exception rules below this one)
 Pipfile.lock
+
+
+# Ignore Build Artifacts
+docs/_build/
