--- a/script/build
+++ b/script/build
@@ -33,7 +33,10 @@ for i in ${@}; do
 done
 
 
-# Project build steps
+echo "==> Cleaning previous build artifacts"
+script/clean
+
+
 if [ ${all} ] || [ ${package} ]; then
     echo "==> Building the Source Distribution package"
     python setup.py sdist
