--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 -i https://pypi.org/simple
-
+-e .
+certifi==2019.3.9
+chardet==3.0.4
+click==7.0
+colorama==0.4.1
+crayons==0.2.0
+idna==2.8
+requests==2.21.0
+urllib3==1.24.2
