Add bump2version for version management

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ verify_ssl = true
 black = "==19.3b0"
 flake8 = "*"
 sphinx = "*"
+bump2version = "*"
 
 [packages]
 cizsle = {editable = true,path = "."}
