--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,16 @@
 [bumpversion]
 current_version = 0.0a2
 parse = (?P<major>\d+)\.(?P<minor>\d+)(?:(?P<status>\.|a|b|rc)(?P<patch>\d+))*
-serialize = 
+serialize =
 	{major}.{minor}{status}{patch}
 	{major}.{minor}.{patch}
 	{major}.{minor}
-commit = False
-tag = False
+commit = True
+tag = True
 sign_tags = True
 
 [bumpversion:part:status]
-values = 
+values =
 	.
 	a
 	b
