--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ serialize =
 	{major}.{minor}.{patch}
 	{major}.{minor}
 commit = True
-tag = True
+tag = False
 sign_tags = True
 
 [bumpversion:part:status]
