--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ black = "==19.3b0"
 flake8 = "*"
 sphinx = "*"
 bump2version = "*"
+twine = "*"
+pytest = "*"
 
 [packages]
 cizsle = {editable = true,path = "."}
