--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,13 @@ python:
 install: script/ci init build install bootstrap
 
 jobs:
-  include:
+  allow_failures:
     - stage: "Tests"
       name: "Lint Code"
       script: script/test lint
     - name: "Build Docs"
       script: script/test docs
+  include:
     - name: "Cizsle Server"
       script: script/test server
     - name: "Cizsle Client"
