--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,17 @@
 -i https://pypi.org/simple
 alabaster==0.7.12
 appdirs==1.4.3
+atomicwrites==1.3.0
 attrs==19.1.0
 babel==2.6.0
 black==19.3b0
+bleach==3.1.0
+bump2version==0.5.10
 certifi==2019.3.9
 chardet==3.0.4
 click==7.0
+codecov==2.0.15
+coverage==4.5.3
 docutils==0.14
 entrypoints==0.3
 flake8==3.7.7
@@ -15,12 +20,20 @@ imagesize==1.1.0
 jinja2==2.10.1
 markupsafe==1.1.1
 mccabe==0.6.1
+more-itertools==7.0.0 ; python_version > '2.7'
 packaging==19.0
+pkginfo==1.5.0.1
+pluggy==0.11.0
+py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
-pygments==2.3.1
+pygments==2.4.0
 pyparsing==2.4.0
+pytest-cov==2.7.1
+pytest==4.4.1
 pytz==2019.1
+readme-renderer==24.0
+requests-toolbelt==0.9.1
 requests==2.21.0
 six==1.12.0
 snowballstemmer==1.2.1
@@ -32,4 +45,7 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
 toml==0.10.0
-urllib3==1.24.2
+tqdm==4.31.1
+twine==1.13.0
+urllib3==1.24.3
+webencodings==0.5.1
