--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,15 @@ chardet==3.0.4
 click==7.0
 colorama==0.4.1
 crayons==0.2.0
+dataclasses==0.6 ; python_version < '3.7'
+fastapi==0.20.0
+h11==0.8.1
+httptools==0.0.13 ; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'pypy'
 idna==2.8
+pydantic==0.23
 requests==2.21.0
+starlette==0.11.1
 urllib3==1.24.3
+uvicorn==0.7.1
+uvloop==0.12.2 ; sys_platform != 'win32' and sys_platform != 'cygwin' and platform_python_implementation != 'pypy'
+websockets==7.0
